@@ -1,3 +1,4 @@
+2018-12-17 Fixed ekeyboard paragraph loading on the first page of mCourser
 2018-12-12 Fixed shape tracing scaling on mobile devices
 2018-12-11 Upgraded tinymce library
 2018-11-28 Fixed media recorder on safari mobile devices and mLibro
